<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AdBlocker Reborn v2</string>
    <string name="xposed_description">AdBlocker reborn, recontinued.</string>
    <string name="hint_reboot_not_active">Module is not activated!</string>
    <string name="actview_hook">Enable Activity and View Block</string>
    <string name="actview_hook_description">Block activities and views according to a preloaded list</string>
    <string name="hosts_hook">Enable Hosts Block</string>
    <string name="hosts_hook_description">Block Host Names according to a preloaded list (Not modifying system hosts, Only support certain methods)</string>
    <string name="webview_hook">Enable WebView Block</string>
    <string name="webview_hook_description">Block page elements according to a preloaded list (Only support certain methods)</string>
    <string name="services_hook">Enable Services Block</string>
    <string name="services_hook_description">Block services according to a preloaded list</string>
    <string name="receivers_hook">Enable Receivers Block</string>
    <string name="receivers_hook_description">Block receivers according to a preloaded list</string>
    <string name="donate_alipay">Donate via Alipay</string>
    <string name="donate_description_alipay">Offer me a cup of coffee</string>
    <string name="license">Open Source Licenses</string>
    <string name="license_description">This module is distributed under GPL-3.0 license</string>
    <string name="open_project">Explore Project Source Code</string>
    <string name="open_project_description">View this project on Github</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="backpress_hook_description">Allow canceling any dialog (Useful when applications show anti-ad dialogs)</string>
    <string name="backpress_hook">Enable Cancelable Dialog</string>
    <string name="debug_description">Record more logs to provide debugging information</string>
    <string name="debug">Enable Debugging Mode</string>
    <string name="hide_launcher_icon">Hide Launcher Icon</string>
    <string name="hide_launcher_icon_description">You can still access settings via Xposed Installer</string>
    <string name="licensedialog">Licenses</string>
    <string name="whitelist">Application Blacklist/Whitelist</string>
    <string name="whitelist_description">Select blacklist/whitelist applications</string>
    <string name="aggressive_hook_description">Block elements which look like an advertisement but unsure</string>
    <string name="aggressive_hook">Enable Aggressive Block</string>
    <string name="donate_description_payapl">Offer me a bottle of beer</string>
    <string name="donate_paypal">Donate via Paypal</string>
    <string name="open_xda_description">Discuss about this module on XDA</string>
    <string name="open_xda">Open Discussion Thread</string>
    <string name="whitelist_element_description">Input elements which will not be affected by this module</string>
    <string name="whitelist_element">Element Whitelist</string>
    <string name="bonus">Bonus</string>
    <string name="donate">Donation</string>
    <string name="system_apps_description">Don\'t act on system applications (will override whitelist configs)</string>
    <string name="system_apps">Enable System Application Protection</string>
    <string name="shortcut_hook_description">Block auto created shortcuts</string>
    <string name="shortcut_hook">Enable Shortcut Block</string>
    <string name="no_reload_description">Improve performance but every config will not take effects until next boot</string>
    <string name="no_reload">Enable Compatibility Mode</string>
    <string name="url_hook_description">Block URLs according to a preloaded list (Highly experimental, only support certain methods)</string>
    <string name="url_hook">Enable URL Block</string>
    <string name="list_mode_description">Use whitelist mode for application list when enabled, blacklist mode when disabled</string>
    <string name="list_mode">Whitelist Mode</string>
    <string name="updatelog">Update Log</string>
    <string name="app_maintainer">HardcodedCat</string>
    <string name="maintainer">Maintainer</string>
    <string name="antixposed_hook_description">Prevent some applications from blocking xposed themselves</string>
    <string name="antixposed_hook">Enable Anti-Anti Xposed Block</string>
    <string name="splash_hook">Enable Anti-Splash Xposed Block</string>
    <string name="splash_hook_description">Block Splash Screen</string>
</resources>