<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:enabled="false"
        android:summary="@string/applist_description"
        android:title="@string/applist" />

    <EditTextPreference
        android:key="ACTIVITY_WHITELIST"
        android:summary="@string/activity_whitelist_description"
        android:title="@string/activity_whitelist" />

    <PreferenceCategory
        android:key="SETTINGS"
        android:title="@string/settings">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="HOSTS_HOOK"
            android:summary="@string/hosts_hook_description"
            android:title="@string/hosts_hook" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="WEBVIEW_HOOK"
            android:summary="@string/webview_hook_description"
            android:title="@string/webview_hook" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="ACTVIEW_HOOK"
            android:summary="@string/actview_hook_description"
            android:title="@string/actview_hook" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="SERVICES_HOOK"
            android:summary="@string/services_hook_description"
            android:title="@string/services_hook" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="RECEIVERS_HOOK"
            android:summary="@string/receivers_hook_description"
            android:title="@string/receivers_hook" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="BACKPRESS_HOOK"
            android:summary="@string/backpress_hook_description"
            android:title="@string/backpress_hook" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="SHORTCUT_HOOK"
            android:summary="@string/shortcut_hook_description"
            android:title="@string/shortcut_hook" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="ANTIXPOSED_HOOK"
            android:summary="@string/antixposed_hook_description"
            android:title="@string/antixposed_hook" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="SPLASH_HOOK"
            android:summary="@string/splash_hook_description"
            android:title="@string/splash_hook" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="AGGRESSIVE_HOOK"
            android:summary="@string/aggressive_hook_description"
            android:title="@string/aggressive_hook" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="URL_HOOK"
            android:summary="@string/url_hook_description"
            android:title="@string/url_hook" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="MISCELLANEOUS"
        android:title="@string/miscellaneous">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="HIDEICON"
            android:summary="@string/hide_launcher_icon_description"
            android:title="@string/hide_launcher_icon" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="NORELOAD"
            android:summary="@string/no_reload_description"
            android:title="@string/no_reload" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="DEBUG"
            android:summary="@string/debug_description"
            android:title="@string/debug" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="ABOUT"
        android:title="@string/about">
        <Preference
            android:key="MAINTAINER"
            android:summary="@string/app_maintainer"
            android:title="@string/maintainer" />
        <Preference
            android:key="GITHUB"
            android:summary="@string/open_project_description"
            android:title="@string/open_project" />
        <Preference
            android:key="LICENSES"
            android:summary="@string/license_description"
            android:title="@string/license" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="CREDITS"
        android:title="@string/credits" />
</PreferenceScreen>
